Add cross-platform build scripts and update .gitignore
Introduced Makefile, build.py, build.sh, and build.bat for automated building, cleaning, and packaging of RustPlusLEDv2 across platforms. Updated .gitignore to exclude build artifacts, release directories, and Python cache files. These changes streamline the build and release process for both developers and CI environments.

--- a/.gitignore
+++ b/.gitignore
@@ -212,6 +212,16 @@ Thumbs.db
 *.dmg
 build/
 dist/
+release/
+
+# PyInstaller build files
+*.spec
+__pycache__/
+*.pyc
+
+# Build artifacts
+*.manifest
+*.spec
 
 # Test configuration files
 test_config.json
